--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -4,4 +4,4 @@ project (Catch)
 add_library(catch INTERFACE)
 
 # INTERFACE targets only have INTERFACE properties
-target_include_directories(catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(catch INTERFACE catch)
