- Actually follow docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,9 @@ matrix:
       osx_image: xcode10.1
       env:
         - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
+
+addons:
+  homebrew:
+    packages:
+      - cmake
+    update: true
