--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,16 @@
 project(tests)
 
-add_executable(tests TestMain.cpp)
-target_link_libraries(tests PRIVATE lodge_lib catch)
+set(BINARY_NAME tests)
+FIND_PACKAGE( Boost 1.68 COMPONENTS filesystem REQUIRED )
+INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
+
+add_executable(${BINARY_NAME} TestMain.cpp)
+target_link_libraries(${BINARY_NAME} PRIVATE lodge_lib catch)
+
+target_link_libraries(${BINARY_NAME} PUBLIC ${Boost_LIBRARIES})
+target_link_libraries(${BINARY_NAME} PUBLIC "libavformat.a")
+target_link_libraries(${BINARY_NAME} PUBLIC "libavutil.a")
+target_link_libraries(${BINARY_NAME} PUBLIC "libavcodec.a")
+target_link_libraries(${BINARY_NAME} PUBLIC "libavfilter.a")
+target_link_libraries(${BINARY_NAME} PUBLIC "swscale.a")
 
