Tests no longer rely on hardcoded path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(Lodge)
 
 set(CMAKE_CXX_STANDARD 17)
 
+FIND_PACKAGE(Boost 1.68 COMPONENTS filesystem REQUIRED)
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
+
 add_subdirectory(include)
 add_subdirectory(src)
 add_subdirectory(test)
