--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ target_include_directories(lodge_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(${BINARY_NAME} Main.cpp)
 
+target_link_libraries(${BINARY_NAME} PUBLIC ${Boost_LIBRARIES})
 target_link_libraries(${BINARY_NAME} PUBLIC "libavformat.a")
 target_link_libraries(${BINARY_NAME} PUBLIC "libavutil.a")
 target_link_libraries(${BINARY_NAME} PUBLIC "libavcodec.a")
