Logging and Command line parsing
	- SPD Log library chosen for logging - simple and easy to use - https://github.com/gabime/spdlog
	- Boost program_options implemented for command line parsing
	- General clean up of code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Lodge)
 
 set(CMAKE_CXX_STANDARD 17)
 
-FIND_PACKAGE(Boost 1.68 COMPONENTS filesystem REQUIRED)
+FIND_PACKAGE(Boost 1.68 COMPONENTS filesystem program_options regex REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 
 add_subdirectory(include)
