Flattened final bit of a byte

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ project(tests)
 
 set(BINARY_NAME tests)
 
-add_executable(${BINARY_NAME} TestMain.cpp)
+add_executable(${BINARY_NAME} TestMain.cpp TestEncoder.cpp)
 target_link_libraries(${BINARY_NAME} PRIVATE lodge_lib catch)
 
 target_link_libraries(${BINARY_NAME} PUBLIC ${Boost_LIBRARIES})
