Generic Bit Manipulation
- Refactored Encoder file to a generic function
- Refactored tests
- Stopped static analysis checking for now...
- Centered image

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(tests)
 
-set(BINARY_NAME tests)
+set(BINARY_NAME lodge_tests)
 
-add_executable(${BINARY_NAME} TestMain.cpp TestEncoder.cpp)
+add_executable(${BINARY_NAME} TestMain.cpp TestEncoder.cpp TestVideoFile.cpp)
 target_link_libraries(${BINARY_NAME} PRIVATE lodge_lib catch)
 
 target_link_libraries(${BINARY_NAME} PUBLIC ${Boost_LIBRARIES})
