--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,21 @@
 project(lodge)
 
+set(CMAKE_CXX_FLAGS  "-Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic")
+
+set(CMAKE_CXX_CPPCHECK "cppcheck")
+if (CMAKE_CXX_CPPCHECK)
+    list(
+            APPEND CMAKE_CXX_CPPCHECK
+            "--enable=all"
+            "--inconclusive"
+            "--force"
+    )
+endif()
+
 add_library(lodge_lib STATIC VideoFile.cpp VideoFile.h Encoder.h)
 target_include_directories(lodge_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(${BINARY_NAME} Main.cpp)
+add_executable(${BINARY_NAME} Main.cpp ../../../../Library/Preferences/CLion2018.3/scratches/hfsf.cpp ../../../../Library/Preferences/CLion2018.3/scratches/hfsf.h)
 
 target_link_libraries(${BINARY_NAME} PUBLIC ${Boost_LIBRARIES})
 target_link_libraries(${BINARY_NAME} PUBLIC "libavformat.a")
