--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ if (CMAKE_CXX_CPPCHECK)
     )
 endif()
 
-add_library(lodge_lib STATIC VideoFile.cpp VideoFile.h Encoder.h SubtitleFile.cpp SubtitleFile.h)
+add_library(lodge_lib STATIC VideoFile.cpp VideoFile.h Encoder.h SubtitleFile.cpp SubtitleFile.h Transcoding.c)
 target_include_directories(lodge_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(${BINARY_NAME} Main.cpp)
@@ -22,6 +22,7 @@ target_link_libraries(${BINARY_NAME} PUBLIC "libavformat.a")
 target_link_libraries(${BINARY_NAME} PUBLIC "libavutil.a")
 target_link_libraries(${BINARY_NAME} PUBLIC "libavcodec.a")
 target_link_libraries(${BINARY_NAME} PUBLIC "libavfilter.a")
+target_link_libraries(${BINARY_NAME} PUBLIC "swscale.a")
 target_link_libraries(${BINARY_NAME} PUBLIC "swscale.a")
 
 target_link_libraries(${BINARY_NAME} PRIVATE lodge_lib)
