Qt GUI project added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 add_subdirectory(include)
 add_subdirectory(src)
 add_subdirectory(test)
+add_subdirectory(gui)
