--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,10 +12,10 @@ set(CMAKE_CXX_FLAGS  "-Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic -g")
 #    )
 #endif()
 
-add_library(lodge_lib STATIC VideoFile.cpp VideoFile.h Encoder.h SubtitleFile.cpp SubtitleFile.h)
+add_library(lodge_lib STATIC video.cpp video.h encoder.h subtitle.cpp subtitle.h)
 target_include_directories(lodge_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(${BINARY_NAME} Main.cpp)
+add_executable(${BINARY_NAME} lodge.cpp)
 
 target_link_libraries(${BINARY_NAME} PUBLIC ${Boost_LIBRARIES})
 target_link_libraries(${BINARY_NAME} PUBLIC "libavformat.a")
