--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_CXX_FLAGS  "-Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic -g")
 #    )
 #endif()
 
-add_library(lodge_lib STATIC video.cpp video.h encoder.h subtitle.cpp subtitle.h)
+add_library(lodge_lib STATIC video.cpp video.h encoder.h subtitle.cpp subtitle.h frame_header.cpp frame_header.h)
 target_include_directories(lodge_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(${BINARY_NAME} lodge.cpp)
