Updated video file testing
When reading a file the subtitle file was set to the filename, and not
the directory it was intended to be in. Fixed this by making the new
subtitle object to be in the directory requested.

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ build
 *.ppm
 *.pgm
 
-test.*
+output/test.mp4
 
 CMakeLists.txt.user
 CMakeCache.txt
@@ -61,3 +61,5 @@ release/
 src/lodge
 test/lodge_tests
 include/LDPC-codes
+
+output/
