Re-structure lodge source code
Library code and front end code decoupled. Front end code is a
layer on top of the lodge_lib now.

CMake has updated to reflect this new stucture.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required(VERSION 3.13)
-set(BINARY_NAME lodge)
 project(lodge)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -7,7 +6,9 @@ set(CMAKE_CXX_STANDARD 17)
 FIND_PACKAGE(Boost 1.68 COMPONENTS filesystem program_options regex REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 
+enable_testing()
+
 add_subdirectory(include)
-add_subdirectory(src)
-add_subdirectory(test)
+add_subdirectory(lib)
+add_subdirectory(app)
 add_subdirectory(gui)
