--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -2,7 +2,11 @@ project(tests)
 
 set(BINARY_NAME lodge_tests)
 
-add_executable(${BINARY_NAME} TestMain.cpp TestEncoder.cpp TestVideoFile.cpp TestSubtitleFile.cpp)
+include_directories(${LIBRARY_INCLUDE_PATH})
+
+file (GLOB TEST_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+
+add_executable(${BINARY_NAME} ${TEST_SOURCE_FILES})
 target_link_libraries(${BINARY_NAME} PRIVATE lodge_lib catch)
 
 target_link_libraries(${BINARY_NAME} PUBLIC ${Boost_LIBRARIES})
@@ -12,3 +16,4 @@ target_link_libraries(${BINARY_NAME} PUBLIC "libavcodec.a")
 target_link_libraries(${BINARY_NAME} PUBLIC "libavfilter.a")
 target_link_libraries(${BINARY_NAME} PUBLIC "swscale.a")
 
+enable_testing()
