--- a/bridge/CMakeLists.txt
+++ b/bridge/CMakeLists.txt
@@ -7,16 +7,18 @@ set(CMAKE_CXX_FLAGS  "-Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic -g")
 
 set (BRIDGE_MODULE_PATH "${CMAKE_SOURCE_DIR}/bridge")
 set (BRIDGE_SRC_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/src" )
-set (BRIDGE_INCLUDE_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/include")
-set (BRIDGE_INCLUDE_PATH  ${BRIDGE_INCLUDE_PATH} PARENT_SCOPE)
 
-include_directories (${BRIDGE_INCLUDE_PATH})
+include_directories (${BRIDGE_INCLUDE_PATH} ${LIBRARY_INCLUDE_PATH}  ${LIB_SOURCE_FILES})
 
 file (GLOB BRIDGE_HEADER_FILES "${BRIDGE_INCLUDE_PATH}/*.h")
+file (GLOB LIB_HEADER_FILES ${LIBRARY_INCLUDE_PATH}/subtitle.h)
+file (GLOB LIB_SOURCE_FILES ${LIBRARY_SRC_PATH}/subtitle.cpp)
 file (GLOB BRIDGE_SOURCE_FILES "${BRIDGE_SRC_PATH}/*.cpp")
 
-add_library (${BINARY_NAME} SHARED ${BRIDGE_SOURCE_FILES} ${BRIDGE_HEADER_FILES})
 
+add_library (${BINARY_NAME} SHARED ${BRIDGE_SOURCE_FILES} ${BRIDGE_HEADER_FILES} ${LIB_HEADER_FILES} ${LIB_SOURCE_FILES})
+
+target_link_libraries(${BINARY_NAME} ${Boost_FILESYSTEM_LIBRARY} ${Boost_REGEX_LIBRARY})
 #COPY LIB TO /usr/local/lib/
 install(TARGETS ${BINARY_NAME}
         LIBRARY DESTINATION lib)
