--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.13)
 project(lodge)
 
+set(Boost_USE_STATIC_LIBS ON)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS  "-Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic -g -fvisibility=hidden -fvisibility-inlines-hidden")
 
-FIND_PACKAGE(Boost 1.68 COMPONENTS filesystem program_options regex REQUIRED)
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
+FIND_PACKAGE(Boost 1.69 COMPONENTS filesystem program_options regex REQUIRED)
 
 enable_testing()
 
