--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,13 +1,11 @@
-set(BINARY_NAME lodge)
+set(BINARY_NAME ldge)
 file (GLOB APP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
 include_directories (${LIBRARY_INCLUDE_PATH})
 add_executable(${BINARY_NAME} ${APP_SOURCE_FILES})
-target_link_libraries(${BINARY_NAME} PRIVATE lodge_lib)
 
+target_include_directories(${BINARY_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/lib)
+
+target_link_libraries(${BINARY_NAME} PRIVATE lodge)
+target_link_libraries(${BINARY_NAME} PRIVATE spdlog::spdlog spdlog::spdlog_header_only)
 target_link_libraries(${BINARY_NAME} PUBLIC ${Boost_LIBRARIES})
-target_link_libraries(${BINARY_NAME} PUBLIC "libavformat.a")
-target_link_libraries(${BINARY_NAME} PUBLIC "libavutil.a")
-target_link_libraries(${BINARY_NAME} PUBLIC "libavcodec.a")
-target_link_libraries(${BINARY_NAME} PUBLIC "libavfilter.a")
-target_link_libraries(${BINARY_NAME} PUBLIC "swscale.a")
